...
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="app_name">Takeme</string>
    <string name="from">From</string>
    <string name="destination">To</string>
    <string name="sign">Sign</string>
    <string name="got_it">Got It</string>
    <string name="add_sign">Add Sign</string>
    <string name="upload_sign">Upload Sign</string>
    <string name="location_error">"Could not get location"</string>

...
